# matcha_watcher

./: .env  Cargo.toml  README.md  install_service.sh  subscribers.json
.github/workflows/: release.yml
src/: commands.rs  config.rs  main.rs
