[package]
name = "matcha_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = { version = "6.1.0", features = ["serde"] }
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = "0.12.19"
scraper = "0.23.1"
serde_json = "1.0.140"
serenity = "0.12.4"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
