[package]
name = "matcha_watcher"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/AlistairKeiller/matcha_watcher"

[dependencies]
dashmap = { version = "6.1.0", features = ["serde"] }
poise = "0.6.1"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
scraper = "0.23.1"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
